codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_halfwidth_kana_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)              │
│                                        │
│ 访问                                   │
│ https://chatgpt.com/codex/settings/usa │
│ 查看最新的                             │
│ 速率限制和点数信息                     │
│                                        │
│  模型:         ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ-model  │
│  目录:         /workspace/tests        │
│  权限:         自定义（工作区，可访问  │
│  Agents.md:    <none>                  │
│  账户:         ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ@example.co │
│  会话名称:     ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ thread │
│  协作模式:     ｶﾞﾊﾟ collaboration mode │
│                                        │
│  限制:         数据尚不可用            │
╰────────────────────────────────────────╯
