codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_wraps_enterprise_monthly_credit_details_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                  │
│                                            │
│ 访问                                       │
│ https://chatgpt.com/codex/settings/usage   │
│ 查看最新的                                 │
│ 速率限制和点数信息                         │
│                                            │
│  模型:           gpt-5.1-codex-max (推理强 │
│  目录:           /workspace/tests          │
│  权限:           自定义（工作区，可访问网  │
│  Agents.md:      <none>                    │
│                                            │
│  Token 用量:     1.2K 总计  (800 输入 + 40 │
│  上下文窗口:     剩余 100% (1.2K 已使用 /  │
│  每月点数限制:   剩余 68%                  │
│                  （5月7日 07:08 重置）     │
│                  已使用 8,000 / 25,000 点  │
╰────────────────────────────────────────────╯
